# wanna

./: LICENSE  README-ja.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
wanna/: chatter.py  cli.py  codedisplay.py  config.py  system.py
