[tool.poetry]
name = "wanna"
version = "0.1.0"
description = "Shell command launcher with natural language"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hirokidaichi/wanna"
authors = ["hirokidaichi <hirokidaichi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
langchain = "^0.0.96"
python-dotenv = "^1.0.0"
questionary = "^1.10.0"
openai = "^0.27.0"
pygments = "^2.14.0"
toml = "^0.10.2"
glom = "^23.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wanna = "wanna.cli:main"